--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-    "name": "com.jakinventions.vocalrec",
-    "displayName": "VocalRec",
-    "version": "1.0.0",
-    "description": "A sample Apache Cordova application that responds to the deviceready event.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "com.jakinventions.vocalrec",
+  "displayName": "VocalRec",
+  "version": "1.0.0",
+  "description": "A sample Apache Cordova application that responds to the deviceready event.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Apache Cordova Team",
+  "license": "Apache-2.0",
+  "dependencies": {
+    "cordova-plugin-speechrecognition": "^1.2.0"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-speechrecognition": {},
+      "cordova-plugin-whitelist": {}
     },
-    "author": "Apache Cordova Team",
-    "license": "Apache-2.0",
-    "dependencies": {
-        "cordova-plugin-speechrecognition": "^1.2.0"
-    },
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-speechrecognition": {}
-        }
-    }
+    "platforms": []
+  },
+  "devDependencies": {
+    "cordova-plugin-whitelist": "^1.3.3"
+  }
 }
